--- a/estilos/_galeria.scss
+++ b/estilos/_galeria.scss
@@ -1,6 +1,6 @@
 #galeria img{
-    width: 350px;
-    height: 400px;
+    width: 250px;
+    height: 250px;
 }
 
 #galeria .col-lg-4{
@@ -8,7 +8,7 @@
     margin: 0px;
 }
 .text-center{
-color: gold;
+color: rgb(209, 171, 47);;
 font-family: cursive;
 }
 
