--- a/estilos/_generales.scss
+++ b/estilos/_generales.scss
@@ -4,7 +4,7 @@
 }
 
 .solamente{
-    color: gold;
+    color: rgb(209, 171, 47);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 30px;
 }
