--- a/estilos/_inicio.scss
+++ b/estilos/_inicio.scss
@@ -1,5 +1,5 @@
 .bienvenidos{
-    color: gold;
+    color: rgb(209, 171, 47);
     font-family:'Redressed', cursiva;
     font-size: 50px;
     position: 0;
