--- a/estilos/_contacto.scss
+++ b/estilos/_contacto.scss
@@ -1,14 +1,14 @@
 .redes{
-    color: gold;
-    color: gold;
+    color: rgb(209, 171, 47);
+    color: rgb(209, 171, 47);
     text-align: center;
     }
 
     .contacto{
 
-        color: gold;
+        color: rgb(209, 171, 47);
         text-align: center;
-    
+        font-size: 20px;
     }
 
     $redes:( 
@@ -22,3 +22,4 @@
             background-color: $color;
         }
     }
+
