--- a/estilos/_header.scss
+++ b/estilos/_header.scss
@@ -1,26 +1,7 @@
-.secciones{
-    display: inline-block;
-    background-color: black;
-    }
-    
-    a{
-        text-decoration: none;
-        color: gold;
-        padding: 14px 16px;
-        display: block;
-        float: left;
-    }
-    
-    .secciones{
-        display: flex;
-        flex-direction:row;
-        justify-content: flex-end;
-        padding-right: 40px;
-        border-width: 20px;
-        font-size: 20px;
-        }
-
-        .logo{
-            max-height: 100%;
-            max-width: 350px;
-        }
+.navbar-dark .navbar-nav .nav-link {
+    color: rgb(209, 171, 47);
+    font-size: 1.5rem;
+}
+.navbar-collapse{
+    flex-grow: initial;
+}
