--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,11 @@ section {
   text-align: center;
   font-size: 20px; }
 
+.contacto a {
+  color: #d1ab2f;
+  text-align: center;
+  font-size: 20px; }
+
 .btn--twitter {
   background-color: #00d9ff; }
 
@@ -67,7 +72,8 @@ section {
   background-color: black;
   height: auto;
   bottom: 0;
-  margin-top: auto; }
+  margin-top: auto;
+  color: #d1ab2f; }
 
 footer {
   background-color: black;
