--- a/estilos/_contacto.scss
+++ b/estilos/_contacto.scss
@@ -11,6 +11,12 @@
         font-size: 20px;
     }
 
+    .contacto a{
+        color: rgb(209, 171, 47);
+        text-align: center;
+        font-size: 20px; 
+    }
+
     $redes:( 
         twitter: rgb(0, 217, 255),
         facebook: rgb(48, 14, 196),
