--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,13 @@ section {
   flex-direction: column;
   min-height: 100vh; }
 
+.precios {
+  color: #d1ab2f;
+  text-align: center;
+  font-size: 20px;
+  border: 5px;
+  padding: 5px; }
+
 .redes {
   color: #d1ab2f;
   color: #d1ab2f;
