--- a/estilos/_generales.scss
+++ b/estilos/_generales.scss
@@ -15,3 +15,11 @@ section{
     flex-direction: column;
     min-height: 100vh;
     }
+    
+    .precios{
+        color: rgb(209, 171, 47);
+        text-align: center;
+        font-size: 20px;
+        border: 5px;
+        padding: 5px;
+    }
