--- a/estilos/_galeria.scss
+++ b/estilos/_galeria.scss
@@ -8,8 +8,9 @@
     margin: 0px;
 }
 .text-center{
-color: rgb(209, 171, 47);;
+color: rgb(209, 171, 47);
 font-family: cursive;
+
 }
 
 #galeria img:hover{
