--- a/estilos/_galeria.scss
+++ b/estilos/_galeria.scss
@@ -9,8 +9,7 @@
 }
 .text-center{
 color: rgb(209, 171, 47);
-font-family: cursive;
-
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 #galeria img:hover{
