--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
 .text-center {
   color: #d1ab2f;
-  font-family: cursive; }
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; }
 
 #galeria img:hover {
   border: 5px solid #4d4949; }
@@ -49,7 +49,7 @@ section {
   text-align: center;
   font-size: 20px;
   border: 5px;
-  padding: 5px; }
+  margin-bottom: 0px; }
 
 .redes {
   color: #d1ab2f;
