--- a/estilos/_generales.scss
+++ b/estilos/_generales.scss
@@ -21,5 +21,5 @@ section{
         text-align: center;
         font-size: 20px;
         border: 5px;
-        padding: 5px;
+        margin-bottom: 0px;
     }
